fixed overflow

--- a/components/MainContainer/MainContainer.module.scss
+++ b/components/MainContainer/MainContainer.module.scss
@@ -2,7 +2,8 @@
     display: grid;
     grid-template-columns: 250px 1fr;
     grid-template-rows: 1fr 90px;
-    min-height: 100vh;
+    height: 100vh;
+    overflow: hidden;
 
     color: $secondary-color;
 
@@ -12,6 +13,7 @@
 
     &__main {
         background-color: #121212;
+        overflow: auto;
     }
 
     &__footer {
